# localstack-sdk-python

./: .gitignore  Makefile  README.md  openapi.yaml  pyproject.toml
.github/workflows/: docs.yml  release.yml  test.yml
docs/: Makefile  conf.py  index.rst  localstack.rst  localstack.sdk.aws.rst  localstack.sdk.chaos.rst  localstack.sdk.pods.rst  localstack.sdk.rst  localstack.sdk.state.rst  modules.rst
localstack-sdk-generated/: .openapi-generator-ignore  pyproject.toml
localstack-sdk-generated/.openapi-generator/: FILES
localstack-sdk-generated/localstack/sdk/: __init__.py  api_client.py  configuration.py
localstack-sdk-generated/localstack/sdk/api/: aws_api.py  chaos_api.py  pods_api.py  state_api.py
localstack-sdk-generated/templates/: pyproject.mustache
localstack-sdk-python/: pyproject.toml
localstack-sdk-python/localstack/: clients.py
localstack-sdk-python/localstack/chaos/: managers.py
localstack-sdk-python/localstack/pytest/: plugins.py
localstack-sdk-python/localstack/sdk/: clients.py
localstack-sdk-python/localstack/sdk/aws/: client.py
localstack-sdk-python/localstack/sdk/chaos/: client.py
localstack-sdk-python/localstack/sdk/state/: client.py
localstack-sdk-python/localstack/sdk/testing/: decorators.py
localstack-sdk-python/tests/integration/: test_chaos.py  test_pods.py
src/localstack/sdk/chaos/: __init__.py  client.py
tests/: utils.py
tests/integration/: test_aws.py  test_chaos.py  test_m.py  test_state.py
tests/testing/: test_decorators.py
