[project]
name = "localstack-sdk-python"
readme = "README.md"
description = "Python SDK for LocalStack"
authors = [
        { name = "LocalStack Team", email = "info@localstack.cloud"}
]
version = "0.0.1"
dependencies = [
    "localstack-sdk-generated"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies=[
    "pytest",
    "ruff"
]

[tool.uv.sources]
localstack-sdk-generated = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["tests*"]

[tool.ruff]
# Extend the ruff config in the root dir
extend = "../ruff.toml"
# Always generate Python 3.8-compatible code.
target-version = "py38"
line-length = 100
src = ["tests", "localstack"]
exclude = [
    ".venv*",
    "venv*",
    "dist",
    "build",
    "target",
    "*.egg-info",
    ".git",
]